Changelog
=========

1.6 - (unreleased)
-----------------

 * fixed wrong label on IndicatorFactSheet for assessment text, adjusted more fields labels and 
descriptions [demarant]

1.5 - (2010-08-04)
------------------
* Fixed missing "More updates info box" in assessment and adjusted design and position on both [demarant]
* Consistent order of fields under aggregated edit of assessment as in the view. [demarant]
* Fix: unicode error in Specification.SearchableText,
       Assessment.SearchableText and IndicatorFactSheet.SearchableText [ghicaale]
* Hide metadata divs from display in active_field and active_region macros [tiberich]
* Fix display and sorting of Assessments for a Specification agg edit. [tiberich]
* Add custom AssessmentPart edit template, to make it include 
  eea.relations JS scripts [tiberich]
* Mark Ownership field as mandatory in agg edit [tiberich]
* Code cleanup in browser/assessment.py to eliminate duplicated code 
  from eea.versions [tiberich]

1.4 - (2010-07-08)
------------------
* Make "codes" available under SearchableText index for Specification,
  Assessment and IndicatorFactSheet [ghicaale]
* Marked more fields on Indicator Fact Sheet as searchable [demarant]
* Fix: typo in traverse.py [ghicaale]

1.3 - (2010-07-07)
------------------
* Add traverser in order to maintain old assessment URLs after migration [ghicaale]

1.2 - (2010-07-01)
------------------
* Removed empty folder 'locales' [ghicaale]

1.1 - (2010-07-01)
------------------
* Fix indexing of themes on Assessments [#3458 ghicaale]

1.0 - (2010-07-01)
------------------
* Initial release [ghicaale]